--- a/TrivialDriveKotlin/app/src/main/res/layout/fragment_make_purchase.xml
+++ b/TrivialDriveKotlin/app/src/main/res/layout/fragment_make_purchase.xml
@@ -27,7 +27,7 @@
 
         <variable
             name="mpvm"
-            type="com.sample.android.trivialdrivesample.MakePurchaseViewModel"/>
+            type="com.themoneygigs.themoneygigs.MakePurchaseViewModel"/>
         <import type="android.view.View"/>
     </data>
     <FrameLayout
